[gd_scene load_steps=15 format=3]

[ext_resource type="Script" path="res://scripts/CameraOrbit.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ShotController.gd" id="2"]
[ext_resource type="Script" path="res://scripts/AimAssist.gd" id="3"]

[sub_resource type="PhysicsMaterial" id="1"]
friction = 0.2
bounce = 0.7

[sub_resource type="PhysicsMaterial" id="2"]
friction = 0.3
bounce = 0.4

[sub_resource type="BoxMesh" id="3"]
size = Vector3(2.54, 0.1, 1.27)

[sub_resource type="BoxShape3D" id="4"]
size = Vector3(2.54, 0.1, 1.27)

[sub_resource type="StandardMaterial3D" id="5"]
albedo_color = Color(0.08, 0.35, 0.16)

[sub_resource type="SphereMesh" id="6"]
radius = 0.028575
height = 0.05715

[sub_resource type="SphereShape3D" id="7"]
radius = 0.028575

[sub_resource type="StandardMaterial3D" id="8"]
albedo_color = Color(0.92, 0.92, 0.92)

[sub_resource type="StandardMaterial3D" id="9"]
albedo_color = Color(0.9, 0.2, 0.2)

[sub_resource type="StandardMaterial3D" id="10"]
transparency = 1
albedo_color = Color(0.6, 0.9, 1.0, 0.35)

[node name="Main" type="Node3D"]

[node name="CameraRig" type="Node3D" parent="."]
position = Vector3(0, 0, 0)
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="CameraRig"]
current = true

[node name="Table" type="StaticBody3D" parent="."]
position = Vector3(0, -0.05, 0)
physics_material_override = SubResource("1")

[node name="TableMesh" type="MeshInstance3D" parent="Table"]
mesh = SubResource("3")
material_override = SubResource("5")

[node name="TableCollision" type="CollisionShape3D" parent="Table"]
shape = SubResource("4")

[node name="CueBall" type="RigidBody3D" parent="." groups=["balls"]]
position = Vector3(-0.6, 0.028575, 0)
mass = 0.17
linear_damp = 0.7
angular_damp = 0.6
physics_material_override = SubResource("2")

[node name="CueBallMesh" type="MeshInstance3D" parent="CueBall"]
mesh = SubResource("6")
material_override = SubResource("8")

[node name="CueBallCollision" type="CollisionShape3D" parent="CueBall"]
shape = SubResource("7")

[node name="TargetBall" type="RigidBody3D" parent="." groups=["balls"]]
position = Vector3(0.4, 0.028575, 0.1)
mass = 0.17
linear_damp = 0.7
angular_damp = 0.6
physics_material_override = SubResource("2")

[node name="TargetBallMesh" type="MeshInstance3D" parent="TargetBall"]
mesh = SubResource("6")
material_override = SubResource("9")

[node name="TargetBallCollision" type="CollisionShape3D" parent="TargetBall"]
shape = SubResource("7")

[node name="AimAssist" type="Node3D" parent="."]
script = ExtResource("3")
cue_ball_path = NodePath("../CueBall")

[node name="CueLine" type="Line3D" parent="AimAssist"]
width = 0.01

[node name="TargetLine" type="Line3D" parent="AimAssist"]
width = 0.01

[node name="GhostBall" type="MeshInstance3D" parent="AimAssist"]
mesh = SubResource("6")
material_override = SubResource("10")

[node name="ShotController" type="Node" parent="."]
script = ExtResource("2")
cue_ball_path = NodePath("../CueBall")
camera_rig_path = NodePath("../CameraRig")
aim_assist_path = NodePath("../AimAssist")
